docs: add docs for getAllOpening
